--- a/polynoid_refs.bib
+++ b/polynoid_refs.bib
@@ -13,6 +13,21 @@ url = {http://dx.doi.org/10.1038/s41467-019-08822-w},
 volume = {10},
 year = {2019}
 }
+@article{Felsenstein1981,
+abstract = {The application of maximum likelihood techniques to the estimation of evolutionary trees from nucleic acid sequence data is discussed. A computationally feasible method for finding such maximum likelihood estimates is developed, and a computer program is available. This method has advantages over the traditional parsimony algorithms, which can give misleading results if rates of evolution differ in different lineages. It also allows the testing of hypotheses about the constancy of evolutionary rates by likelihood ratio tests, and gives rough indication of the error of the estimate of the tree. {\textcopyright} 1981 Springer-Verlag.},
+author = {Felsenstein, Joseph},
+doi = {10.1007/BF01734359},
+file = {:Users/jasonmoggridge/Documents/Mendeley Desktop/Felsenstein - 1981 - Evolutionary trees from DNA sequences A maximum likelihood approach.pdf:pdf},
+issn = {00222844},
+journal = {Journal of Molecular Evolution},
+keywords = {DNA sequences,Estimation,Evolution,Maximum likelihood,Parsimony,Phylogeny},
+number = {6},
+pages = {368--376},
+pmid = {7288891},
+title = {{Evolutionary trees from DNA sequences: A maximum likelihood approach}},
+volume = {17},
+year = {1981}
+}
 @article{Hatch2020a,
 abstract = {Polynoidae Kinberg, 1856 has five branchiate genera: Branchipolynoe Pettibone, 1984, Branchinotogluma Pettibone, 1985, Branchiplicatus Pettibone, 1985, Peinaleopolynoe Desbruy{\`{e}}res {\&} Laubier, 1988, and Thermopolynoe Miura, 1994, all native to deep-sea, chemosynthetic-based habitats. Of these, Peinaleopoly-noe has two accepted species; Peinaleopolynoe sillardi Desbruy{\`{e}}res {\&} Laubier, 1988 (Atlantic Ocean) and Peinaleopolynoe santacatalina Pettibone, 1993 (East Pacific Ocean). The goal of this study was to assess the phylogenetic position of Peinaleopolynoe, utilizing DNA sequences from a broad sampling of deep-sea polynoids. Representatives from all five branchiate genera were included, several species of which were sampled from near the type localities; Branchinotogluma sandersi Pettibone, 1985 from the Gal{\'{a}}pagos Rift (E/V “Nautilus”); Peinaleopolynoe sillardi from organic remains in the Atlantic Ocean; Peinaleopolynoe san-tacatalina from a whalefall off southern California (R/V “Western Flyer”) and Thermopolynoe branchiata Miura, 1994 from Lau Back-Arc Basin in the western Pacific (R/V “Melville”). Phylogenetic analyses were conducted using mitochondrial (COI, 16S rRNA, and CytB) and nuclear (18S rRNA, 28S rRNA, and H3) genes. The analyses revealed four new Peinaleopolynoe species from the Pacific Ocean that are formally described here: Peinaleopolynoe orphanae Hatch {\&} Rouse, sp. nov., type locality Pescadero Basin in the Gulf of California, Mexico (R/V “Western Flyer”); Peinaleopolynoe elvisi Hatch {\&} Rouse, sp. nov. and Peinaleopolynoe goffrediae Hatch {\&} Rouse, sp. nov., both with a type locality in Monterey Canyon off California (R/V “Western Flyer”) and Peinaleopolynoe mineoi Hatch {\&} Rouse, sp. nov. from Costa Rica methane seeps (R/V “Falkor”). In addition to DNA sequence data, the monophyly of Peinaleopolynoe is supported by the presence of ventral papillae on segments 12–15. The results also demonstrated the para-phyly of Branchinotogluma and Lepidonotopodium Pettibone, 1983 and taxonomic revision of these genera is required. We apply the subfamily name Lepidonotopodinae Pettibone 1983, for the clade comprised of Branchipolynoe, Branchinotogluma, Bathykurila, Branchiplicatus, Lepidonotopodium, Levensteiniella Pet-tibone, 1985, Thermopolynoe, and Peinaleopolynoe.},
 author = {Hatch, Avery S. and Liew, Haebin and Hourdez, St{\'{e}}phane and Rouse, Greg W.},
@@ -44,6 +59,18 @@ url = {http://dx.doi.org/10.1016/j.ympev.2012.07.002},
 volume = {65},
 year = {2012}
 }
+@book{Paradis2012,
+abstract = {Data simulation has a critical place in evolutionary biology. Because evolutionary patterns and processes unroll over long time spans, their simulations has become an important ingredient of evolutionary research [e.g., 8]. From a statistical inference point of view, it is necessary to simulate data to assess the statistical properties of hypothesis tests and parameter estimators. This practice still needs to be generalized: it is quite common to read papers describing new data analysis methods without presenting some simulation results in order to asses the bias and variance of the estimators, or the type I and II error rates of the test. On the other hand, the recent rise in uses of simulation procedures for statistical inference (e.g., Markov chains Monte Carlo) has emphasized the need for simulating data under a wide range of situations.},
+author = {Paradis, Emmanuel},
+doi = {10.1007/978-1-4614-1743-9_7},
+edition = {2nd},
+file = {:Users/jasonmoggridge/Documents/Mendeley Desktop/Paradis - 2012 - Analysis of Phylogenetics and Evolution with R.pdf:pdf},
+isbn = {9781461417422},
+pages = {313--330},
+publisher = {Springer},
+title = {{Analysis of Phylogenetics and Evolution with R}},
+year = {2012}
+}
 @article{Posada2001,
 abstract = {Despite the relevant role of models of nucleotide substitution in$\backslash$nphylogenetics, choosing among different models remains a problem.$\backslash$nSeveral statistical methods for selecting the model that best fits the$\backslash$ndata at hand have been proposed, but their absolute and relative$\backslash$nperformance has not yet been characterized. In this study, we compare$\backslash$nunder various conditions the performance of different hierarchical and$\backslash$ndynamic likelihood ratio tests, and of Akaike and Bayesian information$\backslash$nmethods, for selecting best-fit models of nucleotide substitution. We$\backslash$nspecifically examine the role of the topology used to estimate the$\backslash$nlikelihood of the different models and the importance of the order in$\backslash$nwhich hypotheses are tested. We do this by simulating DNA sequences$\backslash$nunder a known model of nucleotide substitution and recording how often$\backslash$nthis true model is recovered by the different methods. Our results$\backslash$nsuggest that model selection is reasonably accurate and indicate that$\backslash$nsome likelihood ratio test methods perform overall better than the$\backslash$nAkaike or Bayesian information criteria. The tree used to estimate the$\backslash$nlikelihood scores does not influence model selection unless it is a$\backslash$nrandomly chosen tree. The order in which hypotheses are tested, and the$\backslash$ncomplexity of the initial model in the sequence of tests, influence$\backslash$nmodel selection in some cases. Model fitting in phylogenetics has been$\backslash$nsuggested for many years, yet many authors still arbitrarily choose$\backslash$ntheir models, often using the default models implemented in standard$\backslash$ncomputer programs for phylogenetic estimation. We show here that a$\backslash$nbest-fit model can be readily identified. Consequently, given the$\backslash$nrelevance of models, model fitting should be routine in any phylogenetic$\backslash$nanalysis that uses models of evolution.},
 author = {Posada, David and Crandall, Keith A.},
@@ -70,6 +97,33 @@ pages = {21--37},
 title = {{Lepidasthenia loboi sp. n. from Puerto Madryn, Argentina (Polychaeta, Polynoidae)}},
 volume = {2015},
 year = {2015}
+}
+@article{Schliep2011,
+abstract = {Summary: phangorn is a package for phylogenetic reconstruction and analysis in the R language. Previously it was only possible to estimate phylogenetic trees with distance methods in R. phangorn, now offers the possibility of reconstructing phylogenies with distance based methods, maximum parsimony or maximum likelihood (ML) and performing Hadamard conjugation. Extending the general ML framework, this package provides the possibility of estimating mixture and partition models. Furthermore, phangorn offers several functions for comparing trees, phylogenetic models or splits, simulating character data and performing congruence analyses. {\textcopyright} The Author(s) 2010. Published by Oxford University Press.},
+author = {Schliep, Klaus Peter},
+doi = {10.1093/bioinformatics/btq706},
+file = {:Users/jasonmoggridge/Documents/Mendeley Desktop/Schliep - 2011 - phangorn Phylogenetic analysis in R.pdf:pdf},
+issn = {13674803},
+journal = {Bioinformatics},
+number = {4},
+pages = {592--593},
+pmid = {21169378},
+title = {{phangorn: Phylogenetic analysis in R}},
+volume = {27},
+year = {2011}
+}
+@article{Wright2016,
+abstract = {In recent years, the cost of DNA sequencing has decreased at a rate that has outpaced improvements in memory capacity. It is now common to collect or have access to many gigabytes of biological sequences. This has created an urgent need for approaches that analyze sequences in subsets without requiring all of the sequences to be loaded into memory at one time. It has also opened opportunities to improve the organization and accessibility of information acquired in sequencing projects. The DECIPHER package offers solutions to these problems by assisting in the curation of large sets of biological sequences stored in compressed format inside a database. This approach has many practical advantages over standard bioinformatics workflows, and enables large analyses that would otherwise be prohibitively time consuming.},
+author = {Wright, Erik S.},
+doi = {10.32614/rj-2016-025},
+file = {:Users/jasonmoggridge/Documents/Mendeley Desktop/Wright - 2016 - Using DECIPHER v2.0 to analyze big biological sequence data in R.pdf:pdf},
+issn = {20734859},
+journal = {R Journal},
+number = {1},
+pages = {352--359},
+title = {{Using DECIPHER v2.0 to analyze big biological sequence data in R}},
+volume = {8},
+year = {2016}
 }
 @article{Zhang2017a,
 abstract = {Polynoid scale worms (Polynoidae, Annelida) invaded deep-sea chemosynthesis-based ecosystems approximately 60 million years ago, but little is known about their genetic adaptation to the extreme deep-sea environment. In this study, we reported the first two transcriptomes of deep-sea polynoids (Branchipolynoe pettiboneae, Lepidonotopodium sp.) and compared them with the transcriptome of a shallow-water polynoid (Harmothoe imbricata). We determined codon and amino acid usage, positive selected genes, highly expressed genes and putative duplicated genes. Transcriptome assembly produced 98,806 to 225,709 contigs in the three species. There were more positively charged amino acids (i.e., histidine and arginine) and less negatively charged amino acids (i.e., aspartic acid and glutamic acid) in the deep-sea species. There were 120 genes showing clear evidence of positive selection. Among the 10{\%} most highly expressed genes, there were more hemoglobin genes with high expression levels in both deep-sea species. The duplicated genes related to DNA recombination and metabolism, and gene expression were only enriched in deep-sea species. Deep-sea scale worms adopted two strategies of adaptation to hypoxia in the chemosynthesis-based habitats (i.e., rapid evolution of tetra-domain hemoglobin in Branchipolynoe or high expression of single-domain hemoglobin in Lepidonotopodium sp.).},
